--- a/index.html
+++ b/index.html
@@ -42,18 +42,26 @@
 						<ul>
 							<li><a href="">Rock</a></li>
 							<li><a href="">More rocks</a></li>
+							<li><img src="img/g4.gif"></li>
 							<li><a href="">Uhh some magic shit</a></li>
 							<li><a href="">Crystals</a></li>
 							<li><a href="">Shit</a></li>
 							<li><a href="">fuck</a></li>
+							<li><img src="img/g3.gif"></li>
 						</ul>
 					</div>
 					<div class="cmiddle">
 						<article>
 						<!-- Common Header END -->
-		<h1>HAHA, U GOT R3KD 69d BITCH</h1>
-		<h2>Happy Birthday, -Reed</h2>
+						<img src="img/g2.gif">
+						</br>
+						</br>
+							<h1 style="font-size:2.5rem">HAHA, U GOT R3KD 69d BITCH</h1>
+							<h2>Happy Birthday, -Reed</h2>
+						</br>
+							<img src="img/g1.gif">
 						</article>
+						
 					</div>
 					<div class="clearboth">
 					</div>
