added some more gifs from reed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<link rel="canonical" href="https://badhtml.com" />
 		<meta property="og:url" content="https://badhtml.com" />
 		<meta property="og:title" content="Bad HTML - Web Design Taboos" />
-        <title>Bad HTML &#128679; The Ugliest Website On The Internet</title>
-        <meta name="description" content="With this website we want to teach you the best web design practices to avoid Bad HTML. Find here everything you need to know to build the most user-friendly website ever">
-		<meta name="keywords" content="bad,html,ugly" />
+        <title>The Spirit Stones</title>
+        <meta name="description" content="TheSpiritStones.com">
+		<meta name="keywords" content="bad,ugly" />
 		<!-- Common Header END -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css" />
@@ -53,11 +53,12 @@
 					<div class="cmiddle">
 						<article>
 						<!-- Common Header END -->
-						<img src="img/g2.gif">
+						<img src="img/g2.gif" style="float:right;">
 						</br>
 						</br>
 							<h1 style="font-size:2.5rem">HAHA, U GOT R3KD 69d BITCH</h1>
 							<h2>Happy Birthday, -Reed</h2>
+						<img src="img/g5.gif">
 						</br>
 							<img src="img/g1.gif">
 						</article>
